Fix Java 8 test compatibility